# offset_slicer

./: CMakeLists.txt  main.cpp  offset_holes.cpp  offset_holes.h
